2003-10-30  Carl Worth  <cworth@isi.edu>

	* src/cairo_gstate.c (_cairo_gstate_init_copy):
	(_cairo_gstate_fini):
	(_cairo_gstate_select_font):
	(_cairo_gstate_set_font): Replace calls to _cairo_font_fini with
	cairo_font_destroy.

	* src/cairo_ft_font.c (_cairo_ft_font_destroy): Rename
	_cairo_ft_font_close to _cairo_ft_font_destroy.

	* src/cairo_font.c: Eliminate unnecessary cairo_font_fini
	function.
	(cairo_font_destroy): Put reference decerement here where it
	belongs.

	* src/cairoint.h: Eliminate unnecessart family, slant, and weight
	fields from cairo_font_t.
	Rname font backend->close to backend->destroy.

2003-10-28  Carl Worth  <cworth@isi.edu>

	* README: Updated to match latest text from web page. Fixed stale
	references to Xc and xrtest.

2003-10-28  Carl Worth  <cworth@isi.edu>

	* src/cairo_xlib_surface.c (_cairo_xlib_surface_pixels_per_inch):
	Implement new backend function.

	* src/cairo_surface.c (_cairo_surface_pixels_per_inch): Add new
	function to query surface pixels_per_inch.

	* src/cairo_gstate.c (_cairo_gstate_init): Rename gstate->ppm to
	gstate->pixels_per_inch. Swithc from default 3780 pixels per meter
	to 96.0 pixels per inch which is slightly different.

2003-10-28  Carl Worth  <cworth@isi.edu>

	* src/cairo_gstate.c (_cairo_gstate_ensure_source):
	(_cairo_gstate_clip_and_composite_trapezoids):
	(_cairo_gstate_clip):
	(_cairo_gstate_show_surface): Track changes to
	_cairo_surface_create_similar_solid.

	* src/cairo_surface.c (_cairo_surface_create_similar_solid): Now
	that this function is internal, it can accept a cairo_color_t
	which makes the interface much cleaner.

	* src/cairo.h: Remove problematic function
	cairo_surface_create_similar_solid from the public API.

2003-10-28  Carl Worth  <cworth@isi.edu>

	* src/cairo_surface.c (_cairo_surface_composite):
	(_cairo_surface_fill_rectangles):
	(_cairo_surface_composite_trapezoids): Fix bug introduced in last
	commit: must check for NULL backend function before calling